2012-02-07  Petr Machata  <pmachata@redhat.com>

	* configure.ac (ELF_HASH_TAKES_SIGNED_CHAR): Rename to
	ELF_HASH_TAKES_CHARP, adjust configure message accordingly.
	* ltrace-elf.c: Adapt to the rename

2011-07-08  Petr Machata  <pmachata@redhat.com>

	* common.h (ltrace_exiting): New interface called when ^C is hit.
	* ltrace.c, handle_event.c: Remove current exit handling.
	* sysdeps/linux-gnu/events.c: Implement exit handling using custom
	event handler.
	* proc.c (open_one_pid): trace_set_options so that attach to
	multi-threaded process works.

2011-07-08  Petr Machata  <pmachata@redhat.com>

	* common.h (struct Process.breakpoint_being_enabled): Drop.
	* handle_event.c: Adapt to above.
	* sysdeps/linux-gnu/events.c: Implement breakpoint re-enablement
	using custom event handler.

2011-07-08  Petr Machata  <pmachata@redhat.com>

	* common.h (struct Event_Handler, install_event_handler)
	(destroy_event_handler): New interfaces for definition of custom
	event handler.
	* handle_event.c (handle_event): Honor custom handler.
	* proc.c (install_event_handler, destroy_event_handler):
	Implementation.

2011-06-01  Petr Machata  <pmachata@redhat.com>

	* sysdeps/linux-gnu/events.c (delayed_events, end_delayed_events):
	New variables for event queue.
	(enque_event): To add new event into the queue.
	(next_qd_event, each_qd_event, enum ecb_status): Iteration interfaces.
	(next_event): Instead of waitpid, pop event que if there are
	events waiting.
	* ltrace.h (Event.next): New field to support event chaining.

2011-05-30  Petr Machata  <pmachata@redhat.com>

	* common.h (enable_breakpoint, disable_breakpoint)
	(continue_enabling_breakpoint): Pass Process * instead of pid.
	* breakpoints.c, sysdeps/linux-gnu/breakpoint.c: Adapt.
	* sysdeps/linux-gnu/trace.c: Adapt.

2011-05-12  Petr Machata  <pmachata@redhat.com>

	* common.h: include config.h

2011-05-09  Petr Machata  <pmachata@redhat.com>

	* common.h (breakpoints_init, insert_breakpoint, open_program):